--- a/app/Resources/DmishhSettingsBundle/translations/settings.en.yml
+++ b/app/Resources/DmishhSettingsBundle/translations/settings.en.yml
@@ -32,3 +32,5 @@ labels:
   linkToYoutube: Youtube
   linkToLinkedIn: Linkedin
   linkToInstagram: Instagram
+  enableBacklink: Display the backlinks
+  backlinks: Backlinks
