--- a/app/Resources/DmishhSettingsBundle/translations/settings.vi.yml
+++ b/app/Resources/DmishhSettingsBundle/translations/settings.vi.yml
@@ -32,3 +32,5 @@ labels:
   linkToYoutube: Youtube
   linkToLinkedin: Linkedin
   linkToInstagram: Instagram
+  enableBacklink: Hiển thị Backlink
+  backlinks: Backlinks
