--- a/app/Resources/DmishhSettingsBundle/translations/settings.vi.yml
+++ b/app/Resources/DmishhSettingsBundle/translations/settings.vi.yml
@@ -21,6 +21,8 @@ labels:
   hotLine2: Hotline 2
   marqueeHomepage: Slogan ở trang chủ
   googleAnalytic: Google analytic
+  ampGTM: AMP GTM
+  ga4MeasurementID: GA4 Measurement ID
   listPrices: Danh sách bảng giá
   listCategoryOnHomepage: Danh sách danh mục hiển thị tại trang chủ
   topKeyword: Từ khóa nổi bật tại footer
