--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -220,6 +220,18 @@
                 <source>label.enable</source>
                 <target>Enable</target>
             </trans-unit>
+            <trans-unit id="label.sortBy">
+                <source>label.sortBy</source>
+                <target>Sắp sếp theo</target>
+            </trans-unit>
+            <trans-unit id="label.ordering">
+                <source>label.ordering</source>
+                <target>Thứ tự</target>
+            </trans-unit>
+            <trans-unit id="label.default">
+                <source>label.default</source>
+                <target>Mặc định</target>
+            </trans-unit>
             <trans-unit id="label.title">
                 <source>label.title</source>
                 <target>Title</target>
